# gtk

./: .clang-format  CMakeLists.txt  readme.md
include/: constants.h  image.h  message_bubble.h  red_dot.h  runner.h  util.h
res/: readme.md  resources.cc  resources.xml
res/top/rayalto/gtk/css/: material-dark.theme.css
script/: gresources-helper  gresources-helper.md
src/: image.cc  message_bubble.cc  red_dot.cc  runner.cc  util.cc
test/: CMakeLists.txt  test.cc  window.cc  window.h
